2009-06-17  Andreas Schwab  <schwab@linux-m68k.org>

	* coding.c (detect_coding_utf_16): Fix previous change.

2009-06-16  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_utf_16): Fix the logic of rejecting
	UTF-16 by checking the dispersion of Eth and Oth bytes.

2009-06-15  Andreas Schwab  <schwab@linux-m68k.org>

	* coding.c (detect_coding_utf_16): Fix typo counting odd bytes.

2009-06-15  Kenichi Handa  <handa@m17n.org>

	* process.c (status_message): Fix previous change.  Be sure to
	decode a localized string.

2009-06-15  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xterm.c (x_delete_terminal): Put previous change in #if 0 and
	add comment explaining why.

2009-06-14  Sidney Markowitz <sidney@sidney.com>

	* nsmenu.m (EmacsTooltip: setText): set height of tooltip.

2009-06-14  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfont.m (ns_attribute_value): Remove.
	(ns_attribute_fvalue): Incorporate code from ns_attribute_value.
	(ns_has_attribute): Shrink the normal range.
	(ns_findfonts): Don't worry about requested spec in determining
	need for synthItal.
	(ns_get_covering_families): Retain scriptToFamilies.

2009-06-14  Seiji Zenitani  <zenitani@mac.com>

	* xdisp.c [USE_MAC_TOOLBAR]: Remove obsolete definition for Mac Carbon.

2009-06-11  Kenichi Handa  <handa@m17n.org>

	* xdisp.c (x_get_glyph_overhangs): Fix calculation of right
	overhang for the static composition case.

2009-06-11  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xdisp.c (x_get_glyph_overhangs): Fix calculation of right
	overhang for the automatic composition case.

	* xterm.c (x_compute_glyph_string_overhangs): Handle the automatic
	composition case.

2009-06-10  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (get_next_display_element): When handling wrap-prefix
	and line-prefix, treat \n as a control character (bug#3502).

2009-06-10  Kenichi Handa  <handa@m17n.org>

	* font.c (font_parse_family_registry): Fix for one-char foundry.