@@ -1,3 +1,9 @@
+2009-06-18  Andreas Schwab  <aschwab@redhat.com>
+
+	* xdisp.c (redisplay_internal): Check that the frame is still
+	live after redisplay of its windows.
+	(redisplay_windows): Check that the window is still live.
+
 2009-06-17  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* coding.c (detect_coding_utf_16): Fix previous change.
